# ohmimetro

./: CMakeLists.txt  README.md  diagram.json  ohmimetro.c
lib/: neopixel.c  neopixel.h  ssd1306.h  ws2812b.pio
